# Linera-flip-market

./: .gitignore  AUDIT_REPORT.md  BUILDATHON_SUBMISSION.md  Cargo.toml  DEMO_VIDEO_SCRIPT.md  DEPLOYMENT_GUIDE.md  README.md  ROADMAP.md  UPDATE_SCREENSHOTS.md
src/: contract.rs  lib.rs  service.rs
web/: package-lock.json  package.json
web/app/: layout.tsx  page.tsx
web/components/: CoinFlipAnimation.tsx  CreateFlip.tsx  FlipCard.tsx  Footer.tsx  Leaderboard.tsx  WalletConnect.tsx
web/lib/: mockApi.ts  store.ts  types.ts  utils.ts
web/types/: ethereum.d.ts
