[package]
name = "flip-market"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-graphql = "7.0"
async-trait = "0.1"
bcs = "0.1"
linera-sdk = { git = "https://github.com/linera-io/linera-protocol.git", branch = "testnet_conway" }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
linera-sdk = { git = "https://github.com/linera-io/linera-protocol.git", branch = "testnet_conway", features = ["test"] }

[lib]
crate-type = ["cdylib"]
